2007-07-16  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync Japanese documentation.

2007-07-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* doc/gnuplot.doc: Minor changes.

2007-07-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_histeps):  The initial move was not clipped to
	the canvas, which caused segfaults in the pdf terminal. Add a clipping
	test.  FIXME:  This entire routine should be rewritten to use
	draw_clip_line().

	* src/wxterminal.c (gp_cairo_draw_point):  Apply current linewidth to
	the line making up a point symbol.

2007-07-11  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: More cleanup.

2007-07-10  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add a section for 'rgbcolor variable'.

	* docs/gnuplot.doc: Move plot style descriptions up by one major level.

	* docs/gnuplot.doc: Consistent use of '2D' and '3D'.

2007-07-06  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc: There are two entries for 'ticslevel' which is a
	problem for more recent 'help'.  Remove one that says "see xyplane"
	so that new help goes directly to 'xyplane' just like old help.

2007-07-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c (apply_zomm): Try an alternative path for replot after
	unzoom. This may or may not fix the problem in bug report #1746902.

2007-07-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots): Initialize
	start_token to 0 to quiet bogus compiler warnings.

2007-06-30  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/help.c (OutLine_InternalPager): Fix compilation when PIPES is not
	defined. Thanks to Dietmar Warning for the report.

2007-06-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_generate_pseudodata): Correct for logscale
	axes in splot.

2007-06-29  Ethan Merritt  <merritt@u.washington.edu>
